--- a/frontend/assets/stylesheets/navs.scss
+++ b/frontend/assets/stylesheets/navs.scss
@@ -1,4 +1,4 @@
-//
+/*//
 // Navs
 // --------------------------------------------------
 
@@ -240,3 +240,4 @@
   // Remove the top rounded corners here since there is a hard edge above the menu
   .border-top-radius(0);
 }
+*/
