Prettified the display and colors

--- a/frontend/assets/stylesheets/profilePic.css
+++ b/frontend/assets/stylesheets/profilePic.css
@@ -1,8 +1,8 @@
+/*Image display component*/
 .profile-picture {
     position: relative;
     width: 50%;
 }
-
 .image {
   opacity: 1;
   display: block;
@@ -60,8 +60,64 @@
     -ms-transform: translate(-50%,-50%);
 }
 #close {
-    float:right;
+    margin-left: 60%;
     display:inline-block;
     padding:2px 5px;
     background:#ccc;
+}
+/*Image upload component*/
+.previewComponent {
+  margin: 0 auto;
+  width: 60%;
+  background-color: rgba(108, 86, 135, 0.4);
+  border-style: solid;
+  border-width: 5px;
+  border-color: rgb(84, 72, 98);
+  text-align:center;
+}
+.imgPreview {
+  border-style: solid;
+  border-width: 5px;
+  border-color: rgb(84, 72, 98);
+  width: 50%;
+  margin: 0 auto;
+  position: relative;
+  display: inline-block;
+}
+#preview {
+  padding: 0;
+  position: absolute;
+  width: auto;
+  height:auto;
+  max-height: 490px;
+  max-width: 490px;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#prev {
+  border-radius: 15px;
+  border-style: solid;
+  border-width: 4px;
+  border-color: rgb(84, 72, 98);
+}
+#fileInput {
+  border-radius: 15px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: rgb(84, 72, 98);
+}
+#submit{
+  background-color: rgb(84, 72, 98);
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+#submit:hover {
+    background-color: white;
+    color: rgb(84, 72, 98);
 }
