added labels to documents

--- a/frontend/assets/stylesheets/base.scss
+++ b/frontend/assets/stylesheets/base.scss
@@ -195,7 +195,7 @@ body {
   font-size: 21px;
 }
 
-.documentUploadButton {
+.documentUpload {
   font-size: 12px;
   padding: 3px 8px;
   border: 2px;
@@ -205,7 +205,7 @@ body {
   margin: 0px;
 }
 
-#documentToUpload {
+.documentUploadButton {
   display: none;
 }
 
