--- a/frontend/assets/stylesheets/base.scss
+++ b/frontend/assets/stylesheets/base.scss
@@ -1,208 +1,93 @@
 h1 {
-  font-family: raleway, sans-serif;
+  font-family: helvetica;
   font-weight: 200;
 }
 
 div {
-    font-family: raleway, sans-serif;
-    background-color:white;
+	font-family: helvetica;
+	font-weight: 200;	
 }
 
-body {
-  background-color: #563d7c;/*rgb(84, 72, 98);*/
+a:not([href]) {
+
 }
 
-.profile-header {
+.primary-color{
+    color:purple;
+}
+
+.vertical-container{
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.vertical-container-centered{
   display:flex;
-}
-
-.profile-about {
-  display: flex;
   flex-direction: column;
-  align-items: left;
-  flex: auto;
-}
-
-.profile-picture {
-  flex: auto;
-}
-
-.profile-name {
-  font-size: 63px;
-  font-weight: 500;
-}
-
-.nav-item a {
-  color:white;
-}
-
-ul {
-  list-style-type: none;
-}
-
-.bg-dark {
-  background-color: #563d7c;
-}
-
-.nav-sidebar a {
-  color:black;
-}
-
-.body-contents {
-  background-color:white;
-}
-
-.display-flex {
-  display: flex;
-}
-
-.flex-item {
-  flex:auto;
-}
-
-.nav-banner {
-  display: flex;
-  background-color: #563d7c;
-  height: 40px;
-}
-
-.nav-item {
-  flex: 1 1 100px; 
-  text-align: center; 
-  color: white;
-  background-color: #563d7c;
   justify-content: center;
-}
-/* "Welcome screen" styles */
-/* Move down content because we have a fixed navbar that is 50px tall */
-
-.background-colored {
-    background-color: rgb(84, 72, 98);
+  align-items: center;
 }
 
-.foreground-colored {
-    color: #825EA8;
+.page-container{
+    margin: 20px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.step-banner {
-    background: rgb(75, 102, 31);
-    color:white;
-    height: 46px;
-    font-weight: bold;
-    padding-bottom: 16px;
-    padding-left: 34px;
-    padding-right: 8px;
-    padding-top: 16px;
-    font-size: 20px;
+.text-input {
+    display: block;
+    width: 92%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out
+}
+
+button {
+    background-color: purple;
+    color: white;
+    display: inline-block;
+    font-weight: 600;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.text-area{
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     margin-bottom:20px;
 }
 
-
-.single-choice {
-    margin-top: 20px;
+textarea {
+    overflow: auto;
+    resize: vertical;
 }
-
-.single-choice div input {
-    margin-right: 10px;
-    margin-bottom:20px;
-}
-
- textarea.ta-question {
-    border-bottom: 3px;
-    border-top: 0px;
-    border-right: 0px;
-    border-left: 0px;
-    max-width: 426px;
-    width:426px;
-}
-
-.next-btn {
-
-}
-
-label.question {
-    font-size: 20px;
-
-}
-
-.btn-primary {
-    background-color: #825EA8;
-    border-color:#825EA8;
-}
-.fileInput {
-  border-bottom: 4px solid #d3d3d3;
-  border-right: 4px solid #d3d3d3;
-  border-top: 1px solid #000;
-  border-left: 1px solid #000;
-  padding: 10px;
-  margin: 15px;
-  cursor: pointer;
-}
-.imgPreview {
-  text-align: center;
-  margin: 5px 15px;
-  height: 500px;
-  width: 500px;
-  border-left: 1px solid #808080;
-  border-right: 1px solid #808080;
-  border-top: 5px solid #808080;
-  border-bottom: 5px solid #808080;
-}
-.imgPreview img {
-  width: auto;
-  height: 100%;
-}
-.previewText {
-  width: 100%;
-  margin-top: 20px;
-}
-.submitButton {
-  padding: 12px;
-  margin-left: 10px;
-  background: #fff;
-  border: 4px solid #d3d3d3;
-  border-radius: 15px;
-  font-weight: 700;
-  font-size: 10pt;
-  cursor: pointer;
-}
-.submitButton:hover {
-  background: #efefef;
-}
-.centerText {
-  text-align: center;
-  width: 500px;
-}
-
-body {
-  padding-top: 20px;
-}
-
-.footer {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  margin-top: 40px;
-  border-top: 1px solid #eee;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  background-color: transparent;
-}
-.jumbotron .btn {
-  padding: 14px 24px;
-  font-size: 21px;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .masthead,
-  .marketing,
-  .footer {
-    padding-right: 0;
-    padding-left: 0;
-  }
-}
-
