--- a/frontend/assets/stylesheets/base.scss
+++ b/frontend/assets/stylesheets/base.scss
@@ -39,6 +39,22 @@ body {
     margin: 0;
   }
 
+  button {
+    float: left;
+    margin-left: 20px;
+    margin-top: 10px;
+
+    background: none !important;
+    border: none;
+    padding: 0 !important;
+
+    /*optional*/
+    font-family: arial, sans-serif; /*input has OS specific font-family*/
+    color: #069;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+
   h2 {
     font-size: 30px;
   }
