--- a/frontend/assets/stylesheets/organization_styles.css
+++ b/frontend/assets/stylesheets/organization_styles.css
@@ -4,8 +4,8 @@
 }
 
 .modal-dialog {
-    position: fixed;
-    top: 30%;
+    position: absolute;
+    top: 50%;
     left: 17%;
     transform: translate(-50%, -50%) !important;
 }
