pulled down profile and organization

--- a/frontend/assets/stylesheets/base.scss
+++ b/frontend/assets/stylesheets/base.scss
@@ -8,10 +8,6 @@ div {
 	font-weight: 200;	
 }
 
-a:not([href]) {
-
-}
-
 .primary-color{
     color:purple;
 }
@@ -90,4 +86,33 @@ button {
 textarea {
     overflow: auto;
     resize: vertical;
+}
+
+.nav {
+    background-color: #564861;
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
+      
+      li {
+        float: left;
+      }
+      
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+      
+      li a:hover {
+        background-color: #92C949;
+      }
 }
