--- a/frontend/assets/stylesheets/base.scss
+++ b/frontend/assets/stylesheets/base.scss
@@ -353,9 +353,10 @@ textarea {
 .nav {
     background-color: #564861;
     display:flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-end;
     align-items: flex-end;
+
     ul {
         list-style-type: none;
         margin: 0;
@@ -376,6 +377,19 @@ textarea {
       
       li a:hover {
         background-color: #92C949;
+      }
+
+      img {
+        height: 50px;
+        width: auto;
+      }
+
+      #nav-logo {
+        margin-right: auto;
+        margin-left: 10px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding: 0px;
       }
 }
 
