Added persistence to meeting history descriptions

--- a/frontend/assets/stylesheets/organization_styles.css
+++ b/frontend/assets/stylesheets/organization_styles.css
@@ -31,3 +31,12 @@ ul {
 	overflow-y: auto; height:70px;
 	border: 2px;
 }
+
+.meetings-scrollable {
+    overflow-y: auto; height:90px;
+    border: 2px;
+}
+
+.editing {
+    border: 50px;
+}
